Add missing parameters to Gerrit Puppet node stanza

--- a/roles/deploy_system_config/templates/site.pp.j2
+++ b/roles/deploy_system_config/templates/site.pp.j2
@@ -28,6 +28,9 @@ node '{{ groups['meta-infra_type_gerrit'][0] }}' {
     email_private_key               => hiera('gerrit_email_private_key', 'XXX'),
     email                           => 'review@infra-ansible.cloud',
     contactstore                    => false,
+    acls_dir                        => $::project_config::gerrit_acls_dir,
+    notify_impact_file              => $::project_config::gerrit_notify_impact_file,
+    projects_file                   => $::project_config::jeepyb_project_file,
     ssh_rsa_key_contents            => hiera('gerrit_ssh_rsa_key_contents', 'XXX'),
     ssh_rsa_pubkey_contents         => hiera('gerrit_ssh_rsa_pubkey_contents', 'XXX'),
     ssh_project_rsa_key_contents    => hiera('gerrit_project_ssh_rsa_key_contents', 'XXX'),
