Change the old meta puppetmaster group to the expected 'puppetmaster' group
The code is switching from relying on metadata based groups to
dynamically created groups with add_host.
As such, the group containing puppetmaster is now 'puppetmaster'.

Change-Id: Ic66a68fd7e873816ec27be37ce4842eea8268a47

--- a/roles/bootstrap_puppet_infra_node/templates/puppet.conf.j2
+++ b/roles/bootstrap_puppet_infra_node/templates/puppet.conf.j2
@@ -1,5 +1,5 @@
 [main]
-server={{ groups['meta-infra_type_puppetmaster'][0] }}
+server={{ groups['puppetmaster'][0] }}
 certname={{ inventory_hostname }}
 logdir=/var/log/puppet
 vardir=/var/lib/puppet
