Change the old meta gerrit group to the expected 'gerrit' group
The code is switching from relying on metadata based groups to
dynamically created groups with add_host.
As such, the group containing gerrit is now 'gerrit'.

Change-Id: I235e445f9e0f7e94f52a0c9dfc0df80b55d49bc1

--- a/roles/bootstrap_puppetmaster/templates/puppet_profiles/zuul.pp.j2
+++ b/roles/bootstrap_puppetmaster/templates/puppet_profiles/zuul.pp.j2
@@ -4,7 +4,7 @@ class infra-ansible::profiles::zuul {
   }
 
   class { '::zuul':
-    gerrit_server        => '{{ groups['meta-infra_type_gerrit'][0] }}',
+    gerrit_server        => '{{ groups['gerrit'][0] }}',
     gerrit_user          => 'gerrit',
     zuul_ssh_private_key => hiera('zuul_ssh_private_key_contents'),
     zuul_url             => 'http://{{ groups['meta-infra_type_zuul'][0] }}/p',
