--- a/roles/bootstrap_puppetmaster/templates/puppet_profiles/zuul.pp.j2
+++ b/roles/bootstrap_puppetmaster/templates/puppet_profiles/zuul.pp.j2
@@ -7,7 +7,7 @@ class infra-ansible::profiles::zuul {
     gerrit_server        => '{{ groups['gerrit'][0] }}',
     gerrit_user          => 'gerrit',
     zuul_ssh_private_key => hiera('zuul_ssh_private_key_contents'),
-    zuul_url             => 'http://{{ groups['meta-infra_type_zuul'][0] }}/p',
+    zuul_url             => 'http://{{ groups['zuul'][0] }}/p',
   }
 
   class { '::zuul::server':
