--- a/roles/bootstrap_puppetmaster/templates/puppet_profiles/zuul.pp.j2
+++ b/roles/bootstrap_puppetmaster/templates/puppet_profiles/zuul.pp.j2
@@ -1,16 +1,3 @@
 class infra-ansible::profiles::zuul {
-  class { '::project_config':
-    url => 'git://git.openstack.org/openstack-infra/project-config'
-  }
-
-  class { '::zuul':
-    gerrit_server        => '{{ groups['gerrit'][0] }}',
-    gerrit_user          => 'gerrit',
-    zuul_ssh_private_key => hiera('zuul_ssh_private_key_contents'),
-    zuul_url             => 'http://{{ groups['zuul'][0] }}/p',
-  }
-
-  class { '::zuul::server':
-    layout_dir => $::project_config::zuul_layout_dir
-  }
+  include openstackci::zuul_scheduler
 }
