Replace openstack.org git:// URLs with https://
This is a mechanically generated change to replace openstack.org
git:// URLs with https:// equivalents.

This is in aid of a planned future move of the git hosting
infrastructure to a self-hosted instance of gitea (https://gitea.io),
which does not support the git wire protocol at this stage.

This update should result in no functional change.

For more information see the thread at

 http://lists.openstack.org/pipermail/openstack-discuss/2019-March/003825.html

Change-Id: I52d96411fb6a9c2cd167e35dd3bdcff816db3a2e

--- a/roles/bootstrap_puppetmaster/templates/puppet_profiles/jenkins.pp.j2
+++ b/roles/bootstrap_puppetmaster/templates/puppet_profiles/jenkins.pp.j2
@@ -1,6 +1,6 @@
 class infra-ansible::profiles::jenkins {
   class { '::project_config':
-    url => 'git://git.openstack.org/openstack-infra/project-config'
+    url => 'https://git.openstack.org/openstack-infra/project-config'
   }
 
   class { 'jenkins::job_builder':
